--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <dimen name="font_large_16">24sp</dimen>
+    <dimen name="font_large_20">20sp</dimen>
     <dimen name="font_normal_16">16sp</dimen>
-    <dimen name="font_small_16">8sp</dimen>
+    <dimen name="font_small_8">8sp</dimen>
 
     <dimen name="spacing_huge_32">32dp</dimen>
     <dimen name="spacing_large_24">24dp</dimen>
@@ -12,4 +12,8 @@
     <dimen name="spacing_tiny_4">4dp</dimen>
 
     <dimen name="button_normal_40">40dp</dimen>
+
+    <dimen name="avatar_normal_112">112dp</dimen>
+
+    <dimen name="devider_avatar_72">72dp</dimen>
 </resources>
