--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
 
     <color name="color_grey_dark">#535A63</color>
     <color name="color_grey">#9CA9BA</color>
-    <color name="color_grey_light">#E4E4E4</color>
+    <color name="color_grey_light">#32E4E4E4</color>
 </resources>
