--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,6 +42,7 @@
                     android:src="@drawable/ic_avatar"/>
 
             <ImageButton
+                    android:id="@+id/btn_edit"
                     android:layout_width="@dimen/button_normal_40"
                     android:layout_height="@dimen/button_normal_40"
                     android:layout_toEndOf="@id/iv_avatar"
@@ -51,19 +52,19 @@
                     android:src="@drawable/ic_edit_black_24dp"/>
 
             <TextView
+                    android:id="@+id/tv_nick_name"
                     style="@style/Profile.Header.Nickname"
-                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_avatar"
                     tools:text="John Doe"/>
 
             <TextView
-                    style="@style/Profile.Header.Rank"
                     android:id="@+id/tv_rank"
+                    style="@style/Profile.Header.Rank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_name"
+                    android:layout_below="@id/tv_nick_name"
                     tools:text="Junior Android Developer"/>
 
         </RelativeLayout>
@@ -86,6 +87,7 @@
                 android:paddingBottom="@dimen/spacing_normal_16">
 
             <TextView
+                    android:id="@+id/tv_rating"
                     style="@style/Profile.Metrics.Value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -117,6 +119,7 @@
                 android:paddingBottom="@dimen/spacing_normal_16">
 
             <TextView
+                    android:id="@+id/tv_respect"
                     style="@style/Profile.Metrics.Value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -201,13 +204,16 @@
                 android:src="@drawable/ic_about"/>
 
         <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/wr_about"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacing_normal_16">
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                app:counterEnabled="false"
+                app:counterMaxLength="128">
 
             <EditText
-                    style="@style/Profile.EditText"
                     android:id="@+id/et_about"
+                    style="@style/Profile.EditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/profile_hint_about"
@@ -238,7 +244,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/spacing_normal_16"
-                android:layout_marginEnd="@dimen/spacing_normal_16"
                 android:layout_weight="1">
 
             <EditText
@@ -253,8 +258,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
+                android:id="@+id/ic_eye"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:layout_marginStart="@dimen/spacing_normal_16"
                 android:src="@drawable/ic_eye_24dp"
                 android:layout_gravity="center_vertical"/>
 
