--- a/app/src/main/res/layout/activity_profile_constraint.xml
+++ b/app/src/main/res/layout/activity_profile_constraint.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    xmlns:tools="http://schemas.android.com/tools"
-                                                   android:orientation="vertical"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
 
@@ -10,23 +9,215 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:srcCompat="@drawable/code"
-            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintDimensionRatio="16:9" android:scaleType="centerCrop"/>
+            app:layout_constraintDimensionRatio="16:9"
+            android:scaleType="centerCrop"/>
+
     <ImageView
             android:layout_width="@dimen/avatar_normal_112"
             android:layout_height="@dimen/avatar_normal_112"
-            app:srcCompat="@drawable/ic_avatar" tools:layout_editor_absoluteY="87dp"
-            tools:layout_editor_absoluteX="189dp" android:id="@+id/imageView2"/>
+            app:srcCompat="@drawable/ic_avatar"
+            android:id="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@id/imageView"
+            app:layout_constraintEnd_toEndOf="@id/imageView"
+            app:layout_constraintStart_toStartOf="@id/imageView"
+            app:layout_constraintBottom_toTopOf="@id/textView"
+            app:layout_constraintVertical_chainStyle="packed"/>
+
+    <ImageView
+            android:layout_width="@dimen/button_normal_40"
+            android:layout_height="@dimen/button_normal_40"
+            app:srcCompat="@drawable/ic_brightness_high_black_24dp"
+            android:id="@+id/imageView3"
+            android:background="@drawable/btn_round_bg"
+
+            app:layout_constraintEnd_toStartOf="@id/imageView2"
+            app:layout_constraintBottom_toBottomOf="@id/imageView2"
+            app:layout_constraintTop_toTopOf="@id/imageView2" android:layout_marginEnd="32dp"/>
+
+    <ImageView
+            android:layout_width="@dimen/button_normal_40"
+            android:layout_height="@dimen/button_normal_40" app:srcCompat="@drawable/ic_edit_black_24dp"
+            android:id="@+id/imageView4"
+            android:background="@drawable/btn_round_bg"
+
+            app:layout_constraintStart_toEndOf="@id/imageView2"
+            app:layout_constraintBottom_toBottomOf="@id/imageView2"
+            app:layout_constraintTop_toTopOf="@id/imageView2" android:layout_marginStart="32dp"/>
+
+    <TextView
+            android:text="John Doe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            style="@style/Profile.Header.Nickname"
+            tools:text="Jogn Doe"
+
+            app:layout_constraintTop_toBottomOf="@id/imageView2"
+            app:layout_constraintBottom_toTopOf="@id/textView2"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="@id/imageView2"
+            app:layout_constraintStart_toStartOf="@id/imageView2"/>
+
+    <TextView
+            android:text="Junior Android Developer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2" style="@style/Profile.Header.Rank"
+            tools:text="Junior Android Developer"
+
+            app:layout_constraintTop_toBottomOf="@id/textView"
+            app:layout_constraintEnd_toEndOf="@id/textView"
+            app:layout_constraintStart_toStartOf="@id/textView"
+            app:layout_constraintBottom_toBottomOf="@id/imageView"/>
+    <View
+            android:layout_width="0dp"
+            android:layout_height="80dp"
+            android:id="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" android:background="@color/color_primary_light"/>
+    <View
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:id="@+id/view2"
+            app:layout_constraintTop_toTopOf="@id/view"
+            app:layout_constraintBottom_toBottomOf="@id/view"
+            app:layout_constraintStart_toStartOf="@id/view"
+            app:layout_constraintEnd_toEndOf="@id/view" android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp" android:background="@color/color_grey_light"/>
+
+    <TextView
+            android:text="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3"
+            style="@style/Profile.Metrics.Value"
+            app:layout_constraintBottom_toTopOf="@id/textView5"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintTop_toTopOf="@+id/view" app:layout_constraintEnd_toStartOf="@+id/view2"
+            app:layout_constraintStart_toStartOf="@+id/view"/>
+    <TextView
+            android:text="@string/profile_label_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView5" style="@style/Profile.Metrics.Label"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintBottom_toBottomOf="@+id/view"/>
+    <TextView
+            android:text="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView4" style="@style/Profile.Metrics.Value"
+            app:layout_constraintTop_toTopOf="@+id/view"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@id/textView6" app:layout_constraintStart_toEndOf="@+id/view2"
+            app:layout_constraintEnd_toEndOf="@+id/view"/>
+    <TextView
+            android:text="@string/profile_label_respect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView6" style="@style/Profile.Metrics.Label"
+            app:layout_constraintTop_toBottomOf="@+id/textView4"
+            app:layout_constraintEnd_toEndOf="@+id/textView4"
+            app:layout_constraintStart_toStartOf="@+id/textView4"
+            app:layout_constraintBottom_toBottomOf="@+id/view"/>
+    <ImageView
+            android:layout_width="@dimen/button_normal_40"
+            android:layout_height="@dimen/button_normal_40" app:srcCompat="@drawable/ic_avatar"
+            android:id="@+id/imageView5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/view"
+            android:layout_marginTop="16dp"/>
+    <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/imageView5" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/imageView5"
+            android:id="@+id/textInputLayout" android:layout_marginStart="16dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_hint_first_name" style="@style/Profile.EditText.Single"
+                tools:text="TESTtext"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintStart_toStartOf="@+id/textInputLayout" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textInputLayout2">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_hint_last_name" style="@style/Profile.EditText.Single"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:id="@+id/view3"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="72dp"
+            android:layout_marginTop="5dp"/>
+    <ImageView
+            android:layout_width="@dimen/button_normal_40"
+            android:layout_height="@dimen/button_normal_40" app:srcCompat="@drawable/ic_about"
+            android:id="@+id/imageView6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view3" android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"/>
+    <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/imageView6" app:layout_constraintTop_toTopOf="@+id/imageView6"
+            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
+            android:id="@+id/textInputLayout3">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_hint_about" style="@style/Profile.EditText.Multiline"/>
+    </com.google.android.material.textfield.TextInputLayout>
+    <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:id="@+id/view4"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
+            android:layout_marginStart="72dp" android:layout_marginTop="5dp"/>
+    <ImageView
+            android:layout_width="@dimen/button_normal_40"
+            android:layout_height="@dimen/button_normal_40" app:srcCompat="@drawable/ic_repository"
+            android:id="@+id/imageView7"
+            app:layout_constraintTop_toBottomOf="@+id/view4" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
+    <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/imageView7" app:layout_constraintTop_toTopOf="@+id/imageView7"
+            android:layout_marginStart="16dp"
+            android:id="@+id/textInputLayout4" app:layout_constraintEnd_toStartOf="@+id/imageView8"
+            android:layout_marginEnd="16dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_hint_repository" style="@style/Profile.EditText.Single"/>
+    </com.google.android.material.textfield.TextInputLayout>
     <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_brightness_high_black_24dp"
-            tools:layout_editor_absoluteY="52dp" tools:layout_editor_absoluteX="41dp" android:id="@+id/imageView3"
-            android:background="@drawable/btn_round_bg"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_edit_black_24dp"
-            tools:layout_editor_absoluteY="40dp" tools:layout_editor_absoluteX="282dp" android:id="@+id/imageView4"
-            android:background="@drawable/btn_round_bg"/>
+            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_eye_24dp"
+            android:id="@+id/imageView8"
+            app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
+            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/textInputLayout4"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
