--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,11 @@
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/color_primary</item>
-        <item name="colorPrimaryDark">@color/color_primary_dark</item>
-        <item name="colorAccent">@color/color_accent</item>
-    </style>
-
     <style name="Profile">
+
     </style>
 
     <style name="Profile.EditText" parent="Profile">
-        <item name="android:paddingTop">@dimen/spacing_tiny_4</item>
-        <item name="android:textColor">@color/color_accent</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:paddingTop">4dp</item>
         <item name="android:enabled">false</item>
         <item name="android:focusableInTouchMode">false</item>
         <item name="android:focusable">false</item>
@@ -23,14 +15,13 @@
         <item name="android:singleLine">true</item>
     </style>
 
-    <style name="Profile.EditText.Multiline" parent="Profile.EditText">
+    <style name="Profile.EditText.MultiLine" parent="Profile.EditText">
         <item name="android:inputType">textMultiLine</item>
         <item name="android:maxLength">128</item>
     </style>
 
     <style name="Profile.Header" parent="Profile">
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:layout_centerHorizontal">true</item>
     </style>
 
     <style name="Profile.Header.Nickname" parent="Profile.Header">
@@ -52,16 +43,18 @@
     </style>
 
     <style name="Profile.Metrics.Value" parent="Profile.Metrics">
-        <item name="android:drawablePadding">@dimen/spacing_tiny_4</item>
+        <item name="android:drawablePadding">4dp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textSize">@dimen/font_large_20</item>
     </style>
     <style name="Profile.InfoItem">
         <item name="android:paddingTop">@dimen/spacing_normal_16</item>
         <item name="android:paddingBottom">5dp</item>
-        <item name="android:paddingStart">@dimen/spacing_normal_16</item>
-        <item name="android:paddingEnd">@dimen/spacing_normal_16</item>
+        <item name="android:paddingLeft">@dimen/spacing_normal_16</item>
+        <item name="android:paddingRight">@dimen/spacing_normal_16</item>
         <item name="android:minHeight">72dp</item>
     </style>
+
+
 
 </resources>
